--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,15 @@ body {
   font-size: 1.3rem;
   font-weight: 500;
   background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+          box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 .card-img {
@@ -62,6 +71,36 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (min-width: 55em) {
+  .card {
+    margin: 20rem auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 75rem;
+  }
+  .card-img {
+    max-width: 28rem;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 1rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: left;
+       object-position: left;
+  }
+  .card-content {
+    padding: 4rem 6rem 3rem 4rem;
+  }
+  .card-article-title {
+    margin: 0;
+    font-size: 2.1rem;
+  }
+  .author-footer {
+    margin-top: 2.5rem;
+  }
 }
 
 .profile-pic {
