--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
 
 .card-content {
   padding: 0 3.2rem 2rem 3.2rem;
+  position: relative;
 }
 
 .card-article-title {
@@ -143,6 +144,46 @@ body {
 .share-button img {
   width: 1.5rem;
   height: 1.5rem;
+}
+
+.share-panel-mobile {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  left: 0;
+  bottom: 0;
+  height: 8rem;
+  background-color: #48556a;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.share-panel-mobile div {
+  margin-left: 3rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: 0.4rem;
+  color: #9eafc2;
+}
+
+.share-panel-mobile img {
+  width: 2rem;
+}
+
+.share-panel-mobile .panel-share-icon img {
+  width: 1.5rem;
+  margin-right: 3rem;
+  -webkit-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(289deg) brightness(109%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(289deg) brightness(109%) contrast(101%);
 }
 
 .attribution {
