--- a/css/styles.scss
+++ b/css/styles.scss
@@ -47,6 +47,7 @@ body {
 
 .card-content {
   padding: 0 3.2rem 2rem 3.2rem;
+  position: relative;
 }
 
 .card-article-title {
@@ -131,6 +132,42 @@ body {
   img {
     width: 1.5rem;
     height: 1.5rem;
+  }
+}
+
+.share-panel-mobile {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  left: 0;
+  bottom: 0;
+  height: 8rem;
+  background-color: $dk-gr-blue;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  div {
+    margin-left: 3rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 0.4rem;
+    color: $gr-blue;
+  }
+
+  img {
+    width: 2rem;
+  }
+
+  .panel-share-icon {
+    img {
+      width: 1.5rem;
+      margin-right: 3rem;
+      filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%)
+        hue-rotate(289deg) brightness(109%) contrast(101%);
+    }
   }
 }
 
