--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,10 @@ body {
 }
 
 .share-button {
+  border: 1px solid red;
   margin-left: auto;
   padding: 0.8rem;
+  position: relative;
   border-radius: 50%;
   background-color: #ecf2f8;
   cursor: pointer;
@@ -114,6 +116,23 @@ body {
 .share-button img {
   width: 1.5rem;
   height: 1.5rem;
+}
+
+.share-panel-desktop {
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  background-color: #48556a;
+  border-radius: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .share-panel-mobile {
