--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ body {
   height: 8rem;
   left: 0;
   bottom: 0;
+  z-index: 1;
   background-color: #48556a;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
@@ -270,6 +271,13 @@ body {
     margin-left: -5px;
     border: 10px solid #48556a;
     border-color: #48556a transparent transparent transparent;
+  }
+  .share-selected {
+    background-color: #48556a;
+  }
+  .share-icon-filter {
+    -webkit-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(289deg) brightness(109%) contrast(101%);
+            filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(289deg) brightness(109%) contrast(101%);
   }
 }
 
