--- a/css/styles.scss
+++ b/css/styles.scss
@@ -254,11 +254,13 @@ body {
 
   .share-selected {
     background-color: $dk-gr-blue;
+    transition: all 0.5s ease;
   }
 
   .share-icon-filter {
     filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%)
       hue-rotate(289deg) brightness(109%) contrast(101%);
+    transition: all 0.5s ease;
   }
 }
 
